Minor changes to buttons and ui-select styles.

--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -39,7 +39,7 @@
                        class="form-control"
                        placeholder='{{i18n.content.esitayta.doihaku.tunniste.tooltip[lang]}}'>
                 <span class="input-group-btn">
-              <button class="btn btn-secondary"
+              <button class="btn btn-primary"
                       data-ng-click="useJulkaisunnimi('CrossRef',julkaisunhakudoi)"
                       data-ng-bind="i18n.content.esitayta.doihaku.hae[lang]">
               </button>
@@ -82,7 +82,7 @@
             <i class="fa fa-spinner fa-spin fa-3x pull-right" data-ng-show="virtaLataa"></i>
         </div>
         <div class="col-xs-6">
-            <button class="btn btn-secondary  pull-right"
+            <button class="btn btn-primary  pull-right"
                     data-ng-click="useJulkaisunnimi(julkaisu.selected.source, julkaisu.selected.identifier)"
                     data-ng-bind="i18n.content.esitayta.hae[lang]">
             </button>
