--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -65,17 +65,20 @@
   transition: all 0.5s ease-in-out;
   //background-color: #026D7C;
   background-color: darken($brand-secondary, 5%);
+  color: $brand-white;
 }
 
 .justus-btn.selected {
   //background-color: #026D7C;
   background-color: $brand-secondary;
+  color: $brand-white;
+
 }
 
 .justus-btn-stage {
   //background-color: #99C2C8;
   background-color: lighten($brand-secondary, 50%);
-  color: #FFFFFF;
+  color: $gray-darker;
   font-size: larger;
   padding: 12px;
   margin: 2px;
@@ -110,13 +113,16 @@
   font-size: larger;
   border: 0;
   border-radius: 4px;
+  color: $gray-darker;
   &:hover {
     background-color: $brand-primary-dark;
+    color: $brand-white;
   }
 }
 
 .justus-btn-tyyppi.active {
   background-color: $brand-primary;
+  color: $brand-white;
 }
 .justus-btn-tyyppi.disabled {
   &:hover {
