--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -18,6 +18,10 @@
   color: #8c8c8c;
 }
 
+.text-dark {
+  color: $text-color-dark;
+}
+
 .text-xl {
   font-size: 1.2em;
 }
@@ -32,6 +36,10 @@
 
 .mb-x {
   margin-bottom: $padding-small-vertical;
+}
+
+.p-1 {
+  padding: $padding-large-horizontal;
 }
 
 .pb{
@@ -132,38 +140,5 @@ input[type=number]
   border-radius: $input-border-radius;
 }
 
-.col-xs-5ths,
-.col-sm-5ths,
-.col-md-5ths,
-.col-lg-5ths {
-  position: relative;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
-}
 
-.col-xs-5ths {
-  width: 20%;
-  float: left;
-}
 
-@media (min-width: 768px) {
-  .col-sm-5ths {
-    width: 20%;
-    float: left;
-  }
-}
-
-@media (min-width: 992px) {
-  .col-md-5ths {
-    width: 20%;
-    float: left;
-  }
-}
-
-@media (min-width: 1200px) {
-  .col-lg-5ths {
-    width: 20%;
-    float: left;
-  }
-}
