--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -23,6 +23,7 @@ $brand-primary-light: #7fbbc3;
 //$brand-primary-light: lighten($brand-primary, 10%);
 
 $text-color: $brand-primary;
+$text-color-secondary: $brand-secondary;
 $text-color-dark: $gray-dark;
 $body-bg: #DDDDDD;
 
