--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -49,6 +49,12 @@
   }
 }
 
+.btn-etusivu {
+  padding: 12px 40px;
+  border-radius: 2px;
+  font-size: $font-size-xl;
+}
+
 .justus-btn {
   cursor: pointer;
   text-align: center;
