--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -371,8 +371,11 @@
           <div class="row form-group" id="organisaatiotekijaRow">
             <div class="row form-group ml-0" data-ng-if="user.hrDataExists">
               <div class="col-xs-12">
-                  <button class="btn" data-ng-click="changeMode($index)" data-ng-class="{'btn-primary': i.useEsitaytto}">Esitäyttö käytössä</button>
-                  <button class="btn" data-ng-click="changeMode($index)" data-ng-class="{'btn-primary': !i.useEsitaytto}">Esitäyttö pois käytöstä</button>
+                <div class="cursor-pointer d-inline-block" data-ng-click="i.useEsitaytto=!i.useEsitaytto">
+                  <i class="fa fa-2x fa-toggle-on" data-ng-class="i.useEsitaytto?'active':'fa-rotate-180 inactive'"></i>
+                  <span data-ng-show="i.useEsitaytto" class="text-secondary  float-right pt pl">Esitäyttö käytössä</span>
+                  <span data-ng-show="!i.useEsitaytto" class="text-secondary text-gray  float-right pt pl">Esitäyttö pois käytössä</span>
+                </div>
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 sukunimiGroup"
@@ -469,7 +472,7 @@
                     <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
                   </div>
                     <div class="col-xs-1 col-sm-1 ">
-                      <span class="btn btn-primary pull-right"
+                      <span class="btn btn-danger pull-right"
                             data-ng-click="poistaAlayksikko(pIx, $index)"
                             title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
                             data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">
@@ -479,7 +482,7 @@
                 </div>
               </div>
 
-              <span>Lisää alayksiköitä</span>
+              <label>Lisää alayksiköitä</label>
               <div class="row form-group">
                   <div class="col-xs-12 col-sm-5">
                     <ui-select data-ng-model="alayksikkovuosi.selected"
