--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -52,9 +52,18 @@
 
 .mt-xl {
   margin-top: $padding-large-vertical*2;
+}
 
 .p-1 {
   padding: $padding-large-horizontal;
+}
+
+.pt {
+  padding-top:5px;
+}
+
+.pl {
+  padding-left: $padding-small-horizontal;
 }
 
 .pb{
@@ -63,7 +72,7 @@
 
 .px {
   padding: 0 $padding-large-horizontal
-};
+}
 
 .pxs {
   padding: 0 $padding-small-horizontal
@@ -75,10 +84,6 @@
 
 .py {
   padding: $padding-small-vertical 0;
-}
-
-.p-l {
-  padding: $padding-large-horizontal;
 }
 
 .p-0 {
