--- a/src/app/scss/components/_icons.scss
+++ b/src/app/scss/components/_icons.scss
@@ -1,13 +1,23 @@
 
-
 .justus-info {
   padding-left: 3px;
   font-size: $font-size-xl;
 }
 
-
 .required-star {
   color: $brand-danger;
   font-size: 10px;
   vertical-align: top;
+}
+
+.active, .inactive {
+  cursor: pointer;
+}
+
+i.active {
+  color: $brand-primary;
+}
+
+i.inactive {
+  color: #333;
 }
