Improve CSV upload preview.

--- a/src/app/html/admin/vie.html
+++ b/src/app/html/admin/vie.html
@@ -1,123 +1,99 @@
 <div data-ng-if="!hakuState">
-    <div class="row no-gutter">
-        <div class="col-md-4">
-            <h4>Lataa tiedot</h4>
-        </div>
 
-        <div class="d-inline-block pull-right">
-            <button class="btn btn-primary">
+    <div class="row mx form-group border-bottom-1">
+        <div class="col-md-4">
+            <h3 class="text-secondary text-primary" style="margin-top: 10px;">Lataa tiedot</h3>
+        </div>
+        <div class="col-md-8 ">
+            <button class="pull-right btn btn-primary">
                 <a data-ng-href="{{csvurl}}" class="text-white no-hover" download="persons.csv">Lataa CSV</a>
             </button>
         </div>
     </div>
 
-
-    <div class="row no-gutter form-group">
+    <div class="row mx form-group pt">
         <div class="col-md-4">
-            <h4>Tuo päivitetyt tiedot</h4>
+            <h3 class="text-secondary text-primary" style="margin-top: 6px;">Tuo päivitetyt tiedot</h3>
         </div>
-
         <div class="col-md-8">
             <div ng-show="!csvFile.file">
                 <div class="d-inline-block pull-right">
-                    <input type="file" ngf-select="uploadCsv(csvFile.file)" ng-model="csvFile.file" name="filename"
+                    <label for="file-upload" class="custom-file-upload btn btn-primary cursor-pointer">
+                        Valitse tiedosto
+                    </label>
+                    <input id="file-upload" type="file" ngf-select="uploadCsv(csvFile.file)" ng-model="csvFile.file" name="filename"
                            ngf-max-size="100MB"  data-file-reader-directive file-content="csvData" accept=".csv">
-                    <!--<button class="btn btn-primary">-->
-                        <!--{{i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.julkaisu.tiedosto.valitse[lang]}}-->
-                    <!--</button>-->
                 </div>
             </div>
             <div ng-show="csvFile.file" class="text-right">
                 <span class="font-weight-bold text-xl" style="margin-right: 10px;">{{csvFile.file.name}}</span>
-<!--                <button class="btn btn-link"-->
-<!--                        data-ng-click="csvFile.file = null; csvData = '' "-->
-<!--                        data-ng-bind="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.julkaisu.tiedosto.poista[lang]">-->
-<!--                </button>-->
-<!--                <button class="btn btn-primary" data-ng-click="uploadCsv(csvFile.file)">-->
-<!--                    Lähetä-->
-<!--                </button>-->
             </div>
         </div>
     </div>
 
-    <div class="row no-gutter" data-ng-if="csvData.data.length > 0">
-        <div class="col-md-12">
-            <table class="table table-condensed">
-                <thead>
-                <tr>
-                    <th class="text-xl">HRnumero</th>
-                    <th class="text-xl">Etunimi</th>
-                    <th class="text-xl">Sukunimi</th>
-                    <th class="text-xl">Email</th>
-                    <th class="text-xl">ORCID</th>
-                    <th class="text-xl">Alayksikkö 1</th>
-                    <th class="text-xl">Alayksikkö 2</th>
-                    <th class="text-xl">Alayksikkö 3</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr data-ng-repeat="row in csvData.data | limitTo: 10">
-                    <td>{{row.hrnumero}}</td>
-                    <td>{{row.etunimi}}</td>
-                    <td>{{row.sukunimi}}</td>
-                    <td>{{row.email}}</td>
-                    <td>{{row.orcid}}</td>
-                    <td>{{row.alayksikko1}}</td>
-                    <td>{{row.alayksikko2}}</td>
-                    <td>{{row.alayksikko3}}</td>
-                </tr>
-                </tbody>
-            </table>
+    <div data-ng-if="csvData.data.length > 0">
+        <div class="row">
+            <div class="col-xs-12 text-secondary">
+                <h4 class="font-weight-700">Esikatselu lisättävistä henkiöistä (10 ensimmäistä):</h4>
+            </div>
         </div>
-    </div>
-
-    <!--    <ul>-->
-<!--        <li data-ng-repeat="row in csvData | limitTo: 10">-->
-<!--            <span class="font-weight-bold pl-x">HRnumero: </span> {{row.hrnumero}},-->
-<!--            <span class="font-weight-bold pl-x">Etunimi: </span> {{row.etunimi}},-->
-<!--            <span class="font-weight-bold pl-x">Sukunimi: </span> {{row.sukunimi}},-->
-<!--            <span class="font-weight-bold pl-x">Email: </span>{{row.email}},-->
-<!--            <span class="font-weight-bold pl-x">Alayksikkö 1: </span>{{row.alayksikko1}},-->
-<!--            <span class="font-weight-bold pl-x">Alayksikkö 2: </span> {{row.alayksikko2}},-->
-<!--            <span class="font-weight-bold pl-x">Alayksikkö 3: </span> {{row.alayksikko3}}-->
-<!--        </li>-->
-
-<!--    </ul>-->
-
-<!--    <div >-->
-        <div class="row" data-ng-if="personsToBeDeleted.length > 0">
+        <div class="row no-gutter">
             <div class="col-md-12">
-                <div>
-                    <h4 class="font-weight-bold text-danger mt-0">Huom! Seuraavat henkilöt poistetaan
-                        tietokannasta:</h4>
-                </div>
-                <div class="form-group">
-                    <ul>
-                        <li data-ng-repeat="person in personsToBeDeleted" class="">
-                            <span class="font-weight-bold">{{person.hrnumero}}</span>
-                            <span class="pxs">{{person.etunimi}} {{person.sukunimi}}</span>
-                        </li>
-                    </ul>
-<!--                    <table class="table table-condensed">-->
-<!--                    <thead>-->
-<!--                    <tr>-->
-<!--                    <th class="text-xl">HRnumero</th>-->
-<!--                    <th class="text-xl">Etunimi</th>-->
-<!--                    <th class="text-xl">Sukunimi</th>-->
-<!--                    </tr>-->
-<!--                    </thead>-->
-<!--                    <tbody>-->
-<!--                    <tr data-ng-repeat="person in personsToBeDeleted">-->
-<!--                    <td>{{person.hrnumero}}</td>-->
-<!--                    <td>{{person.etunimi}}</td>-->
-<!--                    <td>{{person.sukunimi}}</td>-->
-<!--                    </tr>-->
-<!--                    </tbody>-->
-<!--                    </table>-->
-                </div>
+                <table class="table table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Tunniste / ID</th>
+                            <th>Etunimi</th>
+                            <th>Sukunimi</th>
+                            <th>Email</th>
+                            <th>ORCID</th>
+                            <th>Alayksikkö 1</th>
+                            <th>Alayksikkö 2</th>
+                            <th>Alayksikkö 3</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr data-ng-repeat="row in csvData.data | limitTo: 10">
+                            <td>{{row.hrnumero}}</td>
+                            <td>{{row.etunimi}}</td>
+                            <td>{{row.sukunimi}}</td>
+                            <td>{{row.email}}</td>
+                            <td>{{row.orcid}}</td>
+                            <td>{{row.alayksikko1}}</td>
+                            <td>{{row.alayksikko2}}</td>
+                            <td>{{row.alayksikko3}}</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
-        <div class="row" data-ng-if="csvFile.file">
+    </div>
+
+    <div class="row" data-ng-if="personsToBeDeleted.length > 0">
+        <div class="col-md-12">
+            <div>
+                <h4 class="font-weight-700 text-danger mt-0 text-secondary">Huom! Seuraavat henkilöt poistetaan
+                    tietokannasta:</h4>
+            </div>
+            <div class="alert alert-danger text-secondary m-b">
+                <ul>
+                    <li data-ng-repeat="person in personsToBeDeleted" class="">
+                        <span class="font-weight-bold">{{person.hrnumero}}</span>
+                        <span class="pxs">{{person.etunimi}} {{person.sukunimi}}</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div data-ng-if="csvFile.file">
+    <div class="row mb-x">
+            <div class="col-xs-12">
+               <p class="font-weight-500"> Hyväksy yllä olevat muutokset painamalla Tallenna tai hylkää muutokset Peruuta nappulasta</p>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-8">
                 <button class="btn btn-lg btn-primary btn-block"
                         type="button"
@@ -126,14 +102,14 @@
                 </button>
             </div>
             <div class="col-md-4 pull-right">
-                <button class="btn btn-lg btn-secondary btn-block"
+                <button class="btn btn-lg btn-danger btn-block"
                         type="button"
                         data-ng-click="discardChanges(csvData)">
                     Peruuta
                 </button>
             </div>
         </div>
-<!--    </div>-->
+    </div>
 
 </div>
 
