Change navigation button colors.

--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -19,7 +19,8 @@ $brand-white: #FFFFFF;
 $brand-gray: $gray-light;
 
 $brand-primary-dark: #014C56;
-$brand-primary-light: #7fbbc3;
+//$brand-primary-light: #7fbbc3;
+$brand-primary-light: #60abb5;
 //$brand-primary-light: lighten($brand-primary, 10%);
 
 $text-color: $brand-primary;
