--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -63,25 +63,25 @@
         <div class="navigation">
             <a href data-ui-sref="valitse()"
                data-ng-class="getMenuClass('/valitse')"
-               data-ng-bind="i18n.content.valitse.etusivu[lang]">
+               data-ng-bind="i18n.header.navigation.etusivu[lang]">
             </a>
             <a href data-ui-sref="justus({id:id,vaihe:vaihe||1})"
                data-ng-class="getMenuClass('/justus')"
-               data-ng-bind="i18n.content.valitse.tallenna[lang]">
+               data-ng-bind="i18n.header.navigation.tallenna[lang]">
             </a>
             <a href data-ui-sref="omat()"
                data-ng-class="getMenuClass('/omat')"
-               data-ng-bind="i18n.content.valitse.omat[lang]">
+               data-ng-bind="i18n.header.navigation.omat[lang]">
             </a>
             <a data-ng-if="hasAccessToApprove()"
                href data-ui-sref="hyvaksy()"
                data-ng-class="getMenuClass('/hyvaksy')"
-               data-ng-bind="i18n.content.valitse.hyvaksy[lang]">
+               data-ng-bind="i18n.header.navigation.hyvaksy[lang]">
             </a>
             <a
-                    href data-ui-sref="admin()"
-                    data-ng-class="getMenuClass('/admin')">
-                Käyttäjien hallinta
+                href data-ui-sref="admin()"
+                data-ng-class="getMenuClass('/admin')"
+                data-ng-bind="i18n.header.navigation.admin[lang]">
             </a>
         </div>
     </div>
