--- a/src/app/html/valitse.html
+++ b/src/app/html/valitse.html
@@ -10,29 +10,30 @@
             <i class="fa fa-upload fa-4x text-dark" aria-hidden="true"></i>
         </div>
         <button class="btn btn-primary btn-etusivu"
-                data-ui-sref="justus({id:id,vaihe:vaihe||1})">
-            {{ i18n.content.valitse.tallenna[lang] }}
+                data-ui-sref="justus({id:id,vaihe:vaihe||1})"
+                data-ng-bind="i18n.content.valitse.tallenna.button[lang]">
         </button>
-        <p class="m-t text-left px">
-            Julkaisujen tallennus on viisivaiheinen, sisältäen mahdollisuuden myös julkaisun syöttöön organisaatiosta
-            riippuen. Voit halutessasi esitäyttää julkaisuja Virta tai CrossRef palveluista.</p>
+        <p class="m-t text-left px"
+            data-ng-bind="i18n.content.valitse.tallenna.text[lang]">
+        </p>
     </div>
     <div class="col-xs-12 col-sm-6 text-center">
         <div class="m-b">
             <i class="fa fa-list fa-4x text-dark" aria-hidden="true"></i>
         </div>
         <button class="btn btn-primary btn-etusivu"
-                data-ui-sref="omat()">
-            {{ i18n.content.valitse.omat[lang] }}
+                data-ui-sref="omat()"
+                data-ng-bind="i18n.content.valitse.omat.button[lang]">
         </button>
-        <p class="m-t text-left px">Kaikki käyttäjän tallentamat julkaisutiedot näkyvät Omat tallennukset -näkymässä.
-            Näkymä jakautuu hyväksymistä odottaviin julkaisuihin ja hyväksyttyihin julkaisuihin. </p>
+        <p class="m-t text-left px"
+           data-ng-bind="i18n.content.valitse.omat.text[lang]">
+        </p>
     </div>
 </div>
 
 <div data-ng-if="hasAccessToApprove()">
     <div class="p-1 text-dark text-uppercase text-center">
-        <h3 class="">Toiminnallisuudet pääkäyttäjille</h3>
+        <h3 data-ng-bind="i18n.content.valitse.admintitle[lang]"></h3>
     </div>
     <div class="row m-b">
         <div class="col-xs-12 col-sm-6 text-center">
@@ -41,12 +42,12 @@
             </div>
             <button class="btn btn-primary btn-etusivu"
                     data-ng-if="hasAccessToApprove()"
-                    data-ui-sref="hyvaksy()">
-                {{ i18n.content.valitse.hyvaksy[lang] }}
+                    data-ui-sref="hyvaksy()"
+                    data-ng-bind="i18n.content.valitse.hyvaksy.button[lang]">
             </button>
-            <p class="m-t text-left px">Hyväksy tallennuksia näkymässä näkyvät kaikki oman organisaation rivi- ja
-                pääkäyttäjien lisäämät julkaisutiedot.
-                Näkymä jakautuu hyväksymistä odottaviin julkaisuihin ja hyväksyttyihin julkaisuihin.</p>
+            <p class="m-t text-left px"
+                data-ng-bind="i18n.content.valitse.hyvaksy.text[lang]">
+            </p>
         </div>
         <div class="col-xs-12 col-sm-6 text-center">
             <div class="m-b">
@@ -54,13 +55,11 @@
             </div>
             <button class="btn btn-primary btn-etusivu"
                     data-ng-if="hasAccessToApprove()"
-                    data-ui-sref="admin()">
-                Käyttäjien hallinta
+                    data-ui-sref="admin()"
+                    data-ng-bind="i18n.content.valitse.admin.button[lang]">
             </button>
-            <p class="m-t text-left px">Käyttäjien hallinta osiossa pääsee lisäämään ja muokkaamaan organisaation
-                käyttäjiä.
-                Osiossa on mahdollista tuoda käyttäjät ladata käyttäjät CSV-tiedostona palvelimelta sekä lähettää
-                päivitetyt tiedot CSV:nä.
+            <p class="m-t text-left px"
+               data-ng-bind="i18n.content.valitse.admin.text[lang]">
             </p>
         </div>
     </div>
@@ -68,9 +67,9 @@
 
 <div class="row" style="margin-top: 40px;">
     <div class="col-xs-12 text-center text-dark">
-        <p>Justus palvelun tarkemmat ohjeet löytyvät
+        <p> {{i18n.content.valitse.ohje.text[lang]}}
             <a class="font-weight-bold" href="https://wiki.eduuni.fi/display/CscJustus/Ohjeet"
-               target="__blank">täältä
+               target="__blank">{{i18n.content.valitse.ohje.link[lang]}}
             </a>
         </p>
     </div>
